syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "BookService";

package book;

service BookServ {
  rpc GetBookPrice (GetBookPriceRequest) returns (GetBookPriceReply);
  rpc GetBooks (google.protobuf.Empty) returns (stream GetBookReply);
}

message GetBookPriceRequest {
  string book_name = 1;
  string author_name = 2;
  int32 publish_year = 3;
}

message GetBookPriceReply {
  int32 price = 1;
}

message GetBookReply {
  string book_name = 1;
  string author_name = 2;
  int32 publish_year = 3;
}